feat(user): implement the full user controller for dashboard
