# internal/adapter/in/restful/route/route.go
@@ -22,7 +22,18 @@ func (a *api) Login(ctx echo.Context) error {
 	}
 
 	return ctx.JSON(http.StatusOK, &codegen.BaseResponse{
-		Status: utils.Ptr("success"),
+		Status: utils.Ptr("ok"),
 		Msg:    utils.Ptr(loginRequest.UserName + ":" + loginRequest.Password),
+	})
+}
+
+func (a *api) UserInfo(ctx echo.Context) error {
+	return ctx.JSON(http.StatusOK, &codegen.ResponseUserInfo{
+		Name:             utils.Ptr("test"),
+		Avatar:           utils.Ptr("https://avatars.githubusercontent.com/u/11234?v=4"),
+		Email:            utils.Ptr("a778917369@gmail.com"),
+		AccountId:        utils.Ptr("11234"),
+		RegistrationTime: utils.Ptr("2021-01-01 00:00:00"),
+		Permissions:      utils.Ptr("admin"),
 	})
 }
